--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -120,3 +120,29 @@
 button {
     outline: 0
 }
+
+
+.progress-bar-left {
+  border-top-left-radius: 10px;
+  border-bottom-left-radius: 10px;
+}
+
+.progress-bar-right {
+  border-top-right-radius: 10px;
+  border-bottom-right-radius: 10px;
+}
+
+.toggleHash {
+  color: lightgray;
+  font-size: 25px;
+}
+
+.progress {
+    height: 12px;
+    margin-top: 12px;
+    margin-bottom: 0px;
+}
+
+.collapseButton {
+  margin-top: 8px;
+}
