--- a/public/css/mycss.css
+++ b/public/css/mycss.css
@@ -6,13 +6,14 @@
 }
 
 .mypage-header {
-    height: 250px;
-    background-color: #092f5c;
+    /*height: 265px;*/
+    /*background-color: #092f5c;*/
+    /*background-color: #D4AF37;*/
 }
 
 .whitecir {
     border-radius: 50%;
-    box-shadow: 0px 0px 0px 25px rgba(0,0,0,0.5);
+    box-shadow: 0px 0px 0px 20px rgba(0,0,0,0.1);
     background: #fff;
     width: 60px;
     height: 60px;
@@ -95,8 +96,15 @@
 }
 
 .navbar-inverse {
-    background-color: #122c4d !important;
-    border-color: #122c4d !important;
+    background-color: rgba(0,0,0,0.5) !important;
+    /*border-color: #122c4d !important;*/
+}
+
+.navbar {
+     border: 0px;
+    margin-bottom: 0px;
+    height: 40px;
+    min-height: 40px;
 }
 
     .navbar-inverse .navbar-nav > li > a {
