--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -40,10 +40,15 @@
   margin-top: 5px;
   font-size: 32px;
   display: block;
+  color: rgb(212, 175, 55);
 }
 
-.inactiveSubHeaderStep {
+.inActiveSubHeaderStep {
   display: none;
+}
+
+.activeSubHeaderContent {
+  color: white;
 }
 
 .leftAlign {
@@ -232,4 +237,41 @@ button {
 
     box-shadow: inset 0 0px 0px rgba(0,0,0,.075), 0 0 0px rgba(102,175,233,.6);
     border-bottom: 0.5px solid #ccc;
+}
+
+.timeText {
+  background-color: white;
+  border-bottom-left-radius: 20px;
+  border-bottom-right-radius: 20px;
+  border-top-left-radius: 20px;
+  border-top-right-radius: 20px;
+  border: 1px solid #ddd;
+  margin-top: 2px;
+  margin-left: -5px;
+  width: 20px;
+  padding-left: 5px;
+  color: #ddd;
+}
+
+.greenElement {
+  color: green;
+  border-color: green;
+}
+
+.blackElement {
+  color: black;
+  border-color: black;
+}
+
+.textCircle {
+  height: 30px;
+  width: 30px;
+  padding: 4px 6px;
+  border-bottom-left-radius: 30px;
+  border-bottom-right-radius: 30px;
+  border-top-left-radius: 30px;
+  border-top-right-radius: 30px;
+  border: 1px solid #ddd;
+  background-color: #ccc;
+  color: white;
 }
